k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-en-05
  namespace: itip-en-05
  labels:
    app: backend-en-05
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: backend-en-05
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend-en-05
    spec:
      containers:
      - name: backend-en-05
        image: ghcr.io/ucll-integration-project/backend-en-05:staging
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            cpu: 500m
            memory: 768Mi
        startupProbe:
          httpGet:
            path: /v1/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 12
        livenessProbe:
          httpGet:
            path: /v1/health
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
