k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-en-05
  namespace: itip-en-05
  labels:
    app: backend-en-05
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: backend-en-05
  type: ClusterIP
